deploy/k8s/backend-ec2/04-general.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-general
  namespace: kinetic-backend
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: backend-general
  template:
    metadata:
      labels:
        app: backend-general
    spec:
      priorityClassName: high-priority

      nodeSelector:
        app-worker: "true"

      containers:
        - name: general
          image: akankshrakesh/kinetic-backend:${BUILD_NUMBER}
          ports:
            - containerPort: 8080
          
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "300m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /up
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /up
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: backend-general
  namespace: kinetic-backend
spec:
  selector:
    app: backend-general
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
