deploy/k8s/backend-ec2/05-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-auth
  namespace: kinetic-backend
spec:
  replicas: 2
  priorityClassName: high-priority
  selector:
    matchLabels:
      app: backend-auth
  template:
    metadata:
      labels:
        app: backend-auth
    spec:
      containers:
        - name: auth
          image: akankshrakesh/kinetic-backend:latest # or use :${BUILD_NUMBER}
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "384Mi"

          readinessProbe:
            httpGet:
              path: /up
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /up
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: backend-auth
  namespace: kinetic-backend
spec:
  selector:
    app: backend-auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
